Ajout des ressource journaliere

--- a/test.html
+++ b/test.html
@@ -9,7 +9,11 @@
   <button id="test">clique Moi</button>
 </body>
 <!-- <script src="./js/01function.js" type="module"></script> -->
-<script src="./js/02Object.js" type="module"></script>
-
+<!-- <script src="./js/02Object.js" type="module"></script> -->
+<!-- <script src="./js/03ObjetLiteral.js" type="module"></script>
+<script src="./js/04Exercice.js" type="module"></script>
+<script src="./js/05Prototype.js" type="module"></script> -->
+ <script src="./js/06Class.js" type="module"></script> 
+<!-- <script src="./js/07ClassExtends.js" type="module"></script> -->
 
 </html>
