--- a/test.html
+++ b/test.html
@@ -10,10 +10,14 @@
 </body>
 <!-- <script src="./js/01function.js" type="module"></script> -->
 <!-- <script src="./js/02Object.js" type="module"></script> -->
-<!-- <script src="./js/03ObjetLiteral.js" type="module"></script>
-<script src="./js/04Exercice.js" type="module"></script>
-<script src="./js/05Prototype.js" type="module"></script> -->
- <script src="./js/06Class.js" type="module"></script> 
+<!-- <script src="./js/03ObjetLiteral.js" type="module"></script> -->
+<!--<script src="./js/04Exercice.js" type="module"></script> -->
+<!--<script src="./js/05Prototype.js" type="module"></script> -->
+<!-- <script src="./js/06Class.js" type="module"></script>  -->
 <!-- <script src="./js/07ClassExtends.js" type="module"></script> -->
+<!-- <script src="./js/08ClassExtends.js" type="module"></script> -->
+<!-- <script src="./js/08Array.js" type="module"></script>  -->
+<script src="./js/09Structure_de_controle.js" type="module"></script> 
+
 
 </html>
