ajout des cours de la journée

--- a/test.html
+++ b/test.html
@@ -7,17 +7,26 @@
 </head>
 <body>
   <button id="test">clique Moi</button>
-</body>
+  <!-- <h1 id="h1">Clique sur moi</h1> -->
+  <a href="http://www.coopernet.fr" id="h1"> clique sur moi </a>
+
+
+
+
 <!-- <script src="./js/01function.js" type="module"></script> -->
 <!-- <script src="./js/02Object.js" type="module"></script> -->
-<!-- <script src="./js/03ObjetLiteral.js" type="module"></script> -->
+<!-- <script src="./js/03ObjetLiteral.js" type="module"></script>  -->
 <!--<script src="./js/04Exercice.js" type="module"></script> -->
 <!--<script src="./js/05Prototype.js" type="module"></script> -->
 <!-- <script src="./js/06Class.js" type="module"></script>  -->
 <!-- <script src="./js/07ClassExtends.js" type="module"></script> -->
 <!-- <script src="./js/08ClassExtends.js" type="module"></script> -->
 <!-- <script src="./js/08Array.js" type="module"></script>  -->
-<script src="./js/09Structure_de_controle.js" type="module"></script> 
+<!-- <script src="./js/09Structure_de_controle.js" type="module"></script>  -->
+<!-- <script src="./js/10Async.js"></script> -->
+<!-- <script src="./js/10Async.js" type="module"></script> -->
+<!-- <script src="./js/12ImportExport/main.js" type="module"></script> -->
+<script src="./js/13XHR/13xhr.js" type="module"></script>
 
-
+</body>
 </html>
