--- a/test.html
+++ b/test.html
@@ -26,7 +26,9 @@
 <!-- <script src="./js/10Async.js"></script> -->
 <!-- <script src="./js/10Async.js" type="module"></script> -->
 <!-- <script src="./js/12ImportExport/main.js" type="module"></script> -->
-<script src="./js/13XHR/13xhr.js" type="module"></script>
+<!-- <script src="./js/13XHR/13xhr.js" type="module"></script> -->
+<!--<script src="./js/14promise.js" ></script>-->
+<script src="./js/15fetch.js" ></script>
 
 </body>
 </html>
